[metadata]
name = priority
version = attr: priority.__version__
description = A pure-Python implementation of the HTTP/2 priority tree
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Cory Benfield
author_email = cory@lukasa.co.uk
url = https://github.com/python-hyper/priority/
project_urls =
    Documentation=https://python-hyper.org/projects/priority/
    Source=https://github.com/python-hyper/priority/
    Tracker=https://github.com/python-hyper/priority/issues
    Changelog=https://github.com/python-hyper/priority/blob/master/HISTORY.rst
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
package_dir = =src
python_requires = >=3.6.1
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
mypy = mypy>=0.812

[tool:pytest]
testpaths = test

[coverage:run]
branch = True
source = priority

[coverage:report]
fail_under = 100
show_missing = True
exclude_lines =
    pragma: no cover
    assert False, "Should not be reachable"
    .*:.* # Python \d.*
    .*:.* # Platform-specific:

[coverage:paths]
source =
    src
    .tox/*/site-packages
